--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
     "prod": "node server/index.js",
     "local": "dotenv -e .env node server/index.js"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -36,6 +33,9 @@
     ]
   },
   "devDependencies": {
-    "dotenv-cli": "^3.1.0"
+    "dotenv-cli": "^3.1.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1"
   }
 }
